--- a/2023/8.30周报.md
+++ b/2023/8.30周报.md
@@ -1,1 +1,7 @@
+CUDA内存不足的问题
+ 原因与解决办法：
+ 1, 降低图片分辨率；卫星图片分辨率1920×1200，使用人脸数据集100×100，不好；
+ 2, 代码优化；做卫星关键点检测时，为了方便使用人脸关键点模型，把原本的单通道灰度图     扩展为三通道，占用了过多内存；接下来尝试调整模型的结构或权重以适应单通道图像。
+ 3, 服务器；
+
 
