--- a/2023/8.31.md
+++ b/2023/8.31.md
@@ -3,7 +3,7 @@
 ### 主要流程：
  首先准备人脸数据集，选取人脸五个关键点做标记 并生成.xml文件；然后解析.xml文件生成关键点.txt文件;ToTensor() 函数图片归一化换轴，构建网络，训练，将网络输出与label输出做loss，优化。
 #### train_loss: 
-![流程图](picture/8.30-1.png)
+![流程图](MaGuoLin/picture/8.30-1.png)
 #### test_result:
 
 ### 卫星的关键点检测
