--- a/2023/8.31.md
+++ b/2023/8.31.md
@@ -9,13 +9,14 @@
 
 ### 卫星的关键点检测
 数据集，使用标记软件labelme标记8个关键点，以人脸关键点检测为基础做卫星关键点检测
+#### 把原本的单通道灰度图扩展为三通道
 ![流程图](images/8.30-3.png)
 
 ## 本周问题与下周计划解决
 #### CUDA内存不足的问题
 ![流程图](images/8.30-4.png)
 #### 1, 降低图片分辨率；卫星图片分辨率1920×1200，使用人脸数据集100×100，不好；
-#### 2, 代码优化；做卫星关键点检测时，为了方便使用人脸关键点模型，把原本的单通道灰度图     扩展为三通道，占用了过多内存；接下来尝试调整模型的结构或权重以适应单通道图像。
+#### 2, 代码优化；做卫星关键点检测时，为了方便使用人脸关键点模型，把原本的单通道灰度图扩展为三通道，占用了过多内存；接下来尝试调整模型的结构或权重以适应单通道图像。
 #### 3, 服务器；
 
 
