--- a/2023/8.31.md
+++ b/2023/8.31.md
@@ -2,7 +2,7 @@
 ### 人脸关键点检测
 ### 主要流程：
 #### 1 首先准备人脸数据集，选取人脸五个关键点做标记 并生成.xml文件；
-#### 2 然后解析.xml文件生成关键点.txt文件;ToTensor() 函数图片归一化换轴;
+#### 2 然后解析.xml文件生成关键点.txt文件;图片归一化换轴 使用ToTensor() 函数;
 #### 3 构建网络，训练，将网络输出与label输出做loss，优化。
 #### train_loss: 
 ![流程图](images/8.30-1.png)
