--- a/2023/8.31.md
+++ b/2023/8.31.md
@@ -1,5 +1,5 @@
 ## 近期工作
-### 人脸关键点检测
+### 一、人脸关键点检测
 ### 主要流程：
 ##### 1 首先准备人脸数据集，选取人脸五个关键点做标记 并生成.xml文件；
 ##### 2 然后解析.xml文件生成关键点.txt文件;图片归一化换轴 使用ToTensor() 函数;
@@ -9,7 +9,7 @@
 #### test_result:
 ![流程图](images/8.30-2.png)
 
-### 卫星的关键点检测
+### 二、卫星的关键点检测
 数据集，使用标记软件labelme标记8个关键点，以人脸关键点检测为基础做卫星关键点检测
 
 ![流程图](images/8.30-3.png)
