--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -18,5 +18,6 @@
 #### resnet50网络中的残差结构
 ![流程图](images/9.13-3.png)
 
-### 2.卫星的关键点回归
-###
+### 2.卫星的关键点回归及存在的问题
+卫星图片分辨率1920×1200，降低分辨率后能跑起来，但是训练的轮数多了电脑过烫；训练轮数少，导致看不出效果
+服务器，学号目前未激活，无法连接校园网使用服务器。
