--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -17,6 +17,8 @@
 
 #### resnet50网络中的残差结构
 ![流程图](images/9.13-3.png)
+左侧是正常的卷积层，一层层往下传，在右侧增加一条连线，使得整个网络结构形成了一个残差结构。这样，网络的输出不再是单纯卷积的输出F(x)，而是卷积的输出和前面输入的叠加F(x) + X。
+
 
 ### 2.卫星的关键点回归及存在的问题
 卫星图片分辨率1920×1200，降低分辨率后能跑起来，但是训练的轮数多了电脑过烫；训练轮数少，导致看不出效果
