--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -9,7 +9,7 @@
 
 ### resnet50网络结构
 ![流程图](images/9.13-2.png)
-
+-Stage 0：(3,224,224)指输入INPUT的通道数(channel)、高(height)和宽(width)，即(C,H,W)
 -Stage 1：包含3个卷积层和2个池化层，主要负责对输入图像进行特征提取。
 -Stage 2：包含4个卷积层和2个池化层，主要负责对第一阶段提取的特征进一步加深和提升。
 -Stage 3：包含6个卷积层和2个池化层，主要负责对第二阶段提取的特征进一步加深和提升。
