--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -9,7 +9,7 @@
 
 ### resnet50网络结构
 ![流程图](images/9.13-2.png)
-上图（称为本图）可划分为左、中、右3个部分，三者内容分别如下ResNet50整体结构  ResNet50各个Stage具体结构   Bottleneck具体结构
+ResNet50整体结构  ResNet50各个Stage具体结构  
 -Stage 0：(3,224,224)指输入INPUT的通道数(channel)、高(height)和宽(width)，即(C,H,W)
 -Stage 1：包含3个卷积层和2个池化层，主要负责对输入图像进行特征提取。
 -Stage 2：包含4个卷积层和2个池化层，主要负责对第一阶段提取的特征进一步加深和提升。
