--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -8,8 +8,8 @@
 #### y是真实标签，y'是模型的预测输出，n是样本数量
 
 ### resnet50网络结构
-![流程图](images/9.13-2.png)
-ResNet50整体结构        ResNet50各个Stage具体结构  
+  ![流程图](images/9.13-2.png)
+ResNet50整体结构_______ResNet50各个Stage具体结构  
 - Stage 0：(3,224,224)指输入INPUT的通道数(channel)、高(height)和宽(width)，即(C,H,W)
 - Stage 1：包含3个卷积层和2个池化层，主要负责对输入图像进行特征提取。
 - Stage 2：包含4个卷积层和2个池化层，主要负责对第一阶段提取的特征进一步加深和提升。
