--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -21,5 +21,5 @@ ResNet50整体结构       ResNet50各个Stage具体结构 （图中没画全局
 左侧是正常的卷积层，一层层往下传，在右侧增加一条连线，使得整个网络结构形成了一个残差结构。这样，网络的输出不再是单纯卷积的输出F(x)，而是卷积的输出和前面输入的叠加F(x) + X。
 
 ### 2.卫星的关键点回归及存在的问题
-卫星图片分辨率1920×1200，降低分辨率后能跑起来，但是训练的轮数多了电脑过烫；训练轮数少，导致看不出效果
+颜色通道单通道，batchsize=1，卫星图片分辨率1920×1200，降低分辨率后能跑起来，但是训练的十几轮轮数电脑过烫；训练轮数少，loss还未收敛，导致看不出效果。
 服务器，学号目前未激活，无法连接校园网使用服务器。
