--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -8,13 +8,9 @@
 #### y是真实标签，y'是模型的预测输出，n是样本数量
 
 ### resnet50网络结构
-  ![流程图](images/9.13-2.png)
-ResNet50整体结构       ResNet50各个Stage具体结构 （图中没画全局平均池化层和全连接层） 
-- Stage 0：(3,224,224)指输入INPUT的通道数(channel)、高(height)和宽(width)，即(C,H,W)
-- Stage 1：包含3个卷积层和2个池化层，主要负责对输入图像进行特征提取。
-- Stage 2：包含4个卷积层和2个池化层，主要负责对第一阶段提取的特征进一步加深和提升。
-- Stage 3：包含6个卷积层和2个池化层，主要负责对第二阶段提取的特征进一步加深和提升。
-- Stage 4：包含3个卷积层和1个池化层，主要负责对第三阶段提取的特征进一步加深和提升
+  ![流程图](images/9.13-6.jpg)
+Resnet50 网络中包含了 49 个卷积层、一个全连接层。如上图所示，Resnet50网络结构可以分成七个部分，第一部分不包含残差块，主要对输入进行卷积、正则化、激活函数、最大池化的计算。第二、三、四、五部分结构都包含了残差块，图 中的绿色图块不会改变残差块的尺寸，只用于改变残差块的维度。在 Resnet50 网络结构中,残差块都有三层卷积，那 网 络 总 共 有1+3×（3+4+6+3）=49个卷积层，加上最后的全连接层总共是 50 层，这也是Resnet50名称的由来。
+
 
 #### resnet50网络中的残差结构
 ![流程图](images/9.13-3.png)
