--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -8,15 +8,11 @@
 #### y是真实标签，y'是模型的预测输出，n是样本数量
 
 ### resnet50网络结构
-  ![流程图](images/9.13-6.jpg)
-Resnet50 网络中包含了 49 个卷积层、一个全连接层。如上图所示，Resnet50网络结构可以分成七个部分，第一部分不包含残差块，主要对输入进行卷积、正则化、激活函数、最大池化的计算。第二、三、四、五部分结构都包含了残差块，图 中的绿色图块不会改变残差块的尺寸，只用于改变残差块的维度。
 ![流程图](images/9.13-2.png)
-
+Resnet50 网络中包含了 49 个卷积层、一个全连接层。如上图所示，Resnet50网络结构可以分成七个部分，第一部分不包含残差块，主要对输入进行卷积、正则化、激活函数、最大池化的计算。第二、三、四、五部分结构都包含了残差块，图中的不会改变残差块的尺寸，只用于改变残差块的维度。
 在 Resnet50 网络结构中,残差块都有三层卷积，那网络总共有1+3×（3+4+6+3）=49个卷积层，加上最后的全连接层总共是 50 层，这也是Resnet50名称的由来。
-
-
 #### resnet50网络中的残差结构
-![流程图](images/9.13-3.png)
+
 左侧是正常的卷积层，一层层往下传，在右侧增加一条连线，使得整个网络结构形成了一个残差结构。这样，网络的输出不再是单纯卷积的输出F(x)，而是卷积的输出和前面输入的叠加F(x) + X。
 
 ### 2.卫星的关键点回归及存在的问题
