--- a/2023/9.13.md
+++ b/2023/9.13.md
@@ -9,7 +9,7 @@
 
 ### resnet50网络结构
 ![流程图](images/9.13-2.png)
-Resnet50 网络中包含了 49 个卷积层、一个全连接层。如上图所示，Resnet50网络结构可以分成七个部分(图中没有ResNet中的全局平均池化层和全连接层)，第一部分不包含残差块，主要对输入进行卷积、正则化、激活函数、最大池化的计算。第二、三、四、五部分结构都包含了残差块，图中BTNK1的不会改变残差块的尺寸，只用于改变残差块的维度。
+Resnet50 网络中包含了 49 个卷积层、一个全连接层。如上图所示，Resnet50网络结构可以分成5个部分(图中没有ResNet中的全局平均池化层和全连接层)，第一部分不包含残差块，主要对输入进行卷积、正则化、激活函数、最大池化的计算。第二、三、四、五部分结构都包含了残差块，图中BTNK1的不会改变残差块的尺寸，只用于改变残差块的维度。
 #### resnet50网络中的残差结构
 在 Resnet50 网络结构中,残差块都有三层卷积，那网络总共有1+3×（3+4+6+3）=49个卷积层，加上最后的全连接层总共是 50 层，这也是Resnet50名称的由来。
 左侧是正常的卷积层，一层层往下传，在右侧增加一条连线，使得整个网络结构形成了一个残差结构。这样，网络的输出不再是单纯卷积的输出F(x)，而是卷积的输出和前面输入的叠加F(x) + X。
