--- a/2023/9.25.md
+++ b/2023/9.25.md
@@ -4,11 +4,11 @@
 ![流程图](images/9.24-1.jpg)
 #### 卫星的大概形状如上图所示，是一个正方形盒子，前面像是一个箱子，箱子后面贴了一个太阳能板，先按序号 0-3 标注箱子的四个顶点，再序号 4-7 标注太阳能板上的四个关键点。共计8个关键点的坐标做为标签，
 
-输出结果如下图
+#### 输出结果如下图
 
 ![流程图](images/9.24-2.png)
 
-![流程图](images/9.24-3.png)   ![流程图](images/9.24-4.png)
+![流程图](images/9.24-3.png)        ![流程图](images/9.24-4.png)
 
 数据集参数：训练集50张, batchsize=2、图像的分辨率为1920×1200，颜色通道为单通道。
 
