--- a/2023/9.25.md
+++ b/2023/9.25.md
@@ -14,7 +14,8 @@
 
 #### 关键点的信息采用heatmap热力图表示
 
-基于热力图回归：在基于坐标回归的方法中，**目标点其实很难准确的被某一个像素位置定义的，也就很难被准确的标注。而且目标点附近的点其实也很像目标点**，如果我们直接将其标为负样本，可能给网络的训练带来干扰，但如果用高斯函数为这些点做一个"软标注（soft label）"，也就是每一点的标注是距离目标点的“激活值（程度）”，这样网络就会更好的收敛。这样也能够给网络的训练增加一个方向性的引导，距离目标点越近，激活值越大，这样网络能有方向的去快速到达目标点。
+基于热力图回归：在基于坐标回归的方法中，**目标点其实很难准确的被某一个像素位置定义的，也就很难被准确的标注。而且目标点附近的点其实也很像目标点**，如果我们直接将其标为负样本，可能给网络的训练带来干扰，但如果用高斯函数为这些点做一个"软标注（soft label）"，
+也就是每一点的标注是距离目标点的“激活值（程度）”，这样网络就会更好的收敛。这样也能够给网络的训练增加一个方向性的引导，距离目标点越近，激活值越大，这样网络能有方向的去快速到达目标点。
 
 #### 损失函数采用BCE Loss,二分类交叉熵损失函数
 
