--- a/2023/9.25.md
+++ b/2023/9.25.md
@@ -23,7 +23,7 @@ L  =  -(y * log(x) + (1 - y) * log(1 - x)
 
 其中：y代表真实的二进制标签（0或1）。x代表模型预测的概率。
 
-BCE虽然总是用来学习0/1分布，即二分类问题，但不是0/1两个数，只要在0~1之间的数也都能学习。因为只要y在0~1范围内，BCE损失函数就是一个凸函数，有最小值。
+BCE虽然总是用来学习0/1分布，即二分类问题，但不是0/1两个数，只要在0-1之间的数也都能学习。因为只要y在0-1范围内，BCE损失函数就是一个凸函数，有最小值。
 
 因此输出必须在0-1之间，所以为了让网络的输出确保在0~1之间，一般都会加一个Sigmoid激活函数。对其损失函数求导
 
