--- a/2023/9.25.md
+++ b/2023/9.25.md
@@ -1,16 +1,19 @@
 ## 周报9.25
 ### 1.卫星的关键点回归
 <p align="center">
-  <img   src="![流程图](images/9.24-1.jpg)">
+  <img src="images/9.24-1.jpg" alt="Image" />
 </p>
-![流程图](images/9.24-1.jpg)
-#### 卫星的大概形状如上图所示，是一个正方形盒子，前面像是一个箱子，箱子后面贴了一个太阳能板，先按序号 0-3 标注箱子的四个顶点，再序号 4-7 标注太阳能板上的四个关键点。共计8个关键点的坐标做为标签，
+
+卫星的大概形状如上图所示，是一个正方形盒子，前面像是一个箱子，箱子后面贴了一个太阳能板，先按序号 0-3 标注箱子的四个顶点，再序号 4-7 标注太阳能板上的四个关键点。共计8个关键点的坐标做为标签，
 
 #### 输出结果如下图
 
 ![流程图](images/9.24-2.png)
 
-![流程图](images/9.24-3.png)        ![流程图](images/9.24-4.png)
+<div align="center">
+  <img src="images/9.24-3.png" alt="Image 1" style="display:inline-block; margin-right: 20px;" />
+  <img src="images/9.24-4.png" alt="Image 2" style="display:inline-block;" />
+</div>
 
 数据集参数：训练集50张, batchsize=2、图像的分辨率为1920×1200，颜色通道为单通道。
 
@@ -21,16 +24,21 @@
 
 #### 损失函数采用BCE Loss,二分类交叉熵损失函数
 
-L  =  -(y * log(x) + (1 - y) * log(1 - x)
+<div align="center">
+  <p> L  =  -(y * log(x) + (1 - y) * log(1 - x)</p>
+</div>
 
-其中：y代表真实的二进制标签（0或1）。x代表模型预测的概率。
-
+<div align="center">
+  <p>其中：y代表真实的二进制标签（0或1）。x代表模型预测的概率。
+</p>
+</div>
 BCE虽然总是用来学习0/1分布，即二分类问题，但不是0/1两个数，只要在0-1之间的数也都能学习。因为只要y在0-1范围内，BCE损失函数就是一个凸函数，有最小值。
 
 因此输出必须在0-1之间，所以为了让网络的输出确保在0~1之间，一般都会加一个Sigmoid激活函数。对其损失函数求导
 
-![流程图](images/9.24-5.png)
-
+<p align="center">
+  <img src="images/9.24-5.png" alt="Image" />
+</p>
 
 因此，BCE的学习目标就是让输出x去逼近label y。
 
