--- a/2023/10.09.md
+++ b/2023/10.09.md
@@ -6,7 +6,7 @@
 
 训练参数：训练集50张,测试集20张（无挑选）；网络：Unet；训练轮数:120轮；学习率：1e-3；batchsize=2；损失函数：BCE Loss；图像的分辨率为512×512，颜色通道为单通道。
 
-![9.26](F:\新桌面\ZUT\周报\images\9.26.png)
+![9.26](9.26.png)
 
 
 
@@ -22,13 +22,13 @@
 
 
 
-![10.09-2](F:\新桌面\ZUT\周报\images\10.09-2.png)
+![10.09-2](images\10.09-2.png)
 
 
 
-![10.09-3](F:\新桌面\ZUT\周报\images\10.09-3.png)
+![10.09-3](images\10.09-3.png)
 
-![10.09](F:\新桌面\ZUT\周报\images\10.09.png)
+![10.09](images\10.09.png)
 
 ## 下周计划
 
