--- a/2023/10.09.md
+++ b/2023/10.09.md
@@ -14,7 +14,7 @@
 
 2.改进优化网络；
 
-训练参数：TG-1数据集一共157张，分训练集113张,测试集44张（经过挑选,尽可能涵盖各种姿态）；网络：Linet；训练轮数:150轮；学习率：前五十轮1e-3；之后3e-4；batchsize=2；损失函数：MSE Loss；图像的分辨率为512×512，颜色通道为单通道。
+训练参数：TG-1数据集一共177张，分训练集133张,测试集44张（3:1;经过挑选,尽可能涵盖各种姿态）；网络：Linet；训练轮数:150轮；学习率：前五十轮1e-3；之后3e-4；batchsize=2；损失函数：MSE Loss；图像的分辨率为512×512，颜色通道为单通道。
 
 
 
