--- a/2023/10.17.md
+++ b/2023/10.17.md
@@ -13,10 +13,12 @@
                                     ![3](images/3.png)
 
 反向过程：  
-
+                                    ![2](images/1016.png)
+                                    
 ​                                     ![2](images/2.png)
 
 前项过程提供标签 ，反向过程用这个标签去预测 噪声分布 Zt
+
                                      ![1](images/1.png)
                                 
 
