--- a/2023/10.17.md
+++ b/2023/10.17.md
@@ -9,19 +9,25 @@
 生成扩散模型DDPM如下图所示分为前向、逆向两个过程，它首先通过不断往原始清晰数据中添加噪声使其变成标准高斯噪声（前向过程），而后期望从标准高斯噪声中还原原始数据（逆向过程）。若能实现，那我们便可从已知的标准高斯分布中采样一个噪声数据，而后利用DDPM模型生成符合原始数据分布的新数据啦。下面将分别从前向过程和逆向过程两个角度解析DDPM算法。
                                    ![10.173](images/10170.png)
                                    
-在DDPM的前向过程中，通过下式往原始数据中逐步添加高斯噪声 z（添加噪声的过程被假设为服从马尔可夫过程）
+在DDPM的前向过程中，通过下式往原始数据中逐步添加高斯噪声 （添加噪声的过程被假设为服从马尔可夫过程） Z ~ (0 , I)
                                     ![3](images/3.png)
+                                    
+  ![1](images/1017-2.png)
 
-反向过程：  
-                                    ![2](images/1016.png)
+逆向过程：   降噪
 
                                     
-​                                     ![2](images/2.png)
+
+                                    
+​                                     ![2](images/1017-1.png)
+
+   ![2](images/1016.png)
 
 前项过程提供标签 ，反向过程用这个标签去预测 噪声分布 Zt :       
                                 
   ![1](images/1.png)
-
+  
+  ![1](images/1017-3.png)
                                 
 ### 3 多类别+关键点检测 
 - 必要性？
