--- a/2023/10.17.md
+++ b/2023/10.17.md
@@ -25,7 +25,7 @@
 
 前项过程提供标签 ，反向过程用这个标签去预测 噪声分布 Zt :       
                                 
-  ![1](images/1.png)
+  ![1](images/1017-4.png)
   
   ![1](images/1017-3.png)
                                 
