--- a/2023/10.24/10.24.md
+++ b/2023/10.24/10.24.md
@@ -8,6 +8,7 @@
 DDPM是基于Markovian扩散过程的模型，就是由于在重建生成阶段是需要一步步进行，q(x<sub>t-1</sub> | $x_t$) 推理时间非常长，需要多次迭代才能产生高质量的生成样本，
 DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针对耗时问题进行优化，在满足DDPM中逆向推理的条件下，找到一种用$x_t$和$x_0$ 表达 x<sub>t-1</sub> 且能能大幅减少计算量的推理方式。
 ![[Pasted image 20231021134912.png]]
+
 ![[Pasted image 20231023223509.png]]
 
 ### 2.多类别+关键点检测 
@@ -21,7 +22,7 @@ DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针
 训练轮数:300轮；学习率：前五十轮：1e-3；之后3e-4
 损失函数：BCE Loss
 
-![[100110.jpg]]
+![][images/100110.jpg]
 ![[100510.jpg]]![[101010.jpg]]![[102010.jpg]]![[103010.jpg]]![[104010.jpg]]![[105010.jpg]]![[106010.jpg]]![[107010.jpg]]![[108010.jpg]]![[109010.jpg]]
 
 - 4 多类别  数据集 格式 分辨率 通道 统一 ？
