--- a/2023/10.24/10.24.md
+++ b/2023/10.24/10.24.md
@@ -22,7 +22,8 @@ DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针
 训练轮数:300轮；学习率：前五十轮：1e-3；之后3e-4
 损失函数：BCE Loss
 
-![][images/100110.jpg]
+![1][10.24/images/100110.jpg]
+
 ![[100510.jpg]]![[101010.jpg]]![[102010.jpg]]![[103010.jpg]]![[104010.jpg]]![[105010.jpg]]![[106010.jpg]]![[107010.jpg]]![[108010.jpg]]![[109010.jpg]]
 
 - 4 多类别  数据集 格式 分辨率 通道 统一 ？
