--- a/2023/10.24/1024.md
+++ b/2023/10.24/1024.md
@@ -6,7 +6,7 @@
 在DDPM中我们基于初始图像状态以及最终高斯噪声状态，通过贝叶斯公式以及多元高斯分布的散度公式，可以计算出每一步骤的逆向分布。之后继续重复上述对逆向分布的求解步骤，最终实现从纯高斯噪声，恢复到原始图片的步骤。
 
 DDPM是基于Markovian扩散过程的模型，就是由于在重建生成阶段是需要一步步进行，q(x<sub>t-1</sub> | $x_t$) 推理时间非常长，需要多次迭代才能产生高质量的生成样本，
-DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针对耗时问题进行优化，在满足DDPM中逆向推理的条件下，找到一种用$x_t$和$x_0$ 表达 x<sub>t-1</sub> 且能能大幅减少计算量的推理方式。
+DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针对耗时问题进行优化，在满足DDPM中逆向推理的条件下，找到一种用x<sub>t</sub>和x<sub>0</sub>表达 x<sub>t-1</sub> 且能能大幅减少计算量的推理方式。
 ![](images/912.png)
 ![](images/509.png)
 
