--- a/2023/10.24/1024.md
+++ b/2023/10.24/1024.md
@@ -14,7 +14,7 @@ DDIM（denoising diffusion implicit model，去噪扩散隐式模型）核心针
 
 ### 2.多类别+关键点检测 
 - 1.生成数据集 
-- 2.标注数据集
+- 2.标注数据集 太阳能板四个角点和上方类似长方体底面的四个角点
 ![](images/微信图片编辑_20231023215616.jpg)
 - 3.换目标做关键点检测
 原数据集参数：分辨率;700×525，颜色通道：三通道。
