--- a/2023/10.31.md
+++ b/2023/10.31.md
@@ -4,7 +4,7 @@
 通过新目标三维fig1的关键点调整K矩阵;
 矫正：用角度相差较大的两张图像的关键点的偏移差
 值（向量）
-![10.31](img/10.311.png)
+![10.31](images/10.311.png)
 ### 1.下周任务
 分别制作Aura ,MRO 200张数据集，并训练；
 
