--- a/2023/11.07周报/11.7.md
+++ b/2023/11.07周报/11.7.md
@@ -26,11 +26,12 @@ test_result 见下图：
 ![11.77](images/mro1.png)
 未矫正之前图像MRO，对其进行矫正的始终无法对其，尝试其他关键点也不行（在这耗费了大量时间）
 未矫正之前其他目标的偏移是规律的，呈平行四变形形
-MRO:
+- MRO:
 ![11.78](images/mro3.png)
-Worldview : 
+- Worldview : 
 ![11.74](images/world_1.jpg)
-Aura:
+- Aura:
+
 ![11.75](images/aura1.jpg)
 ### 3，小结
 - 1.目前有Rosetta;  TG-1;  Aura;  MRO 四个目标的完整的数据集和训练好的网络参数；
