--- a/2023/11.07周报/11.7.md
+++ b/2023/11.07周报/11.7.md
@@ -1,7 +1,7 @@
 ### 1.多类别+关键点检测 
 - 主要是学习，熟悉 matlab生成图像的程序，学会自动标注; 生成了Aura, Worldview数据集, 并训练生成网络参数，测试达到了预期效果。
-- 自动标注主要步骤：
- 通过新目标三维fig1的标注关键点调整K矩阵;投影到二维图像中存在质心偏移，故需要矫正； 矫正：用角度相差较大的两张图像的关键点的偏移差值（向量）
+- **自动标注**主要步骤：
+ 通过新目标三维fig1的标注关键点**调整K矩阵**;投影到二维图像中存在质心偏移，故需要矫正； **矫正**：用角度相差较大的两张图像的关键点的偏移差值（向量）
 #### Aura 大气卫星
 （搭载了四个对地观测仪：高分辨率动态临边探测器（HRDLS）、微波临边探测器（MLS）、对流层放射光谱仪（TES）、臭氧监测仪（OMI））、
 关键点选择
