--- a/2023/11.07周报/11.7.md
+++ b/2023/11.07周报/11.7.md
@@ -7,7 +7,7 @@
 关键点选择
 ![11.71](images/aura2.jpg)
 - 数据集制作： 总178张，训练集126张，测试集52张(按照观测角度顺序依次生成，分数据集时每十个为一组，前七个划分到训练集，后三个划分到测试集)
-test_result 见下图：
+- test_result 见下图：
 ![11.71](images/Aura.png)
 #### worldview 世界眼卫星
 - 关键点选择 如下图标注8个关键点；
@@ -22,10 +22,10 @@ test_result 见下图：
 但是MRO卫星存在问题
 ![11.76](images/mro2.jpg)
 
-标记三维图像更改k矩阵
+标记三维图像调整k矩阵
 ![11.77](images/mro1.png)
-未矫正之前图像MRO，对其进行矫正的始终无法对其，尝试其他关键点也不行（在这耗费了大量时间）
-未矫正之前其他目标的偏移是规律的，呈平行四变形形
+未矫正之前图像MRO，**对其进行矫正后始终无法对齐**，尝试其他关键点也不行（在这耗费了大量时间）
+其他目标未矫正之前的偏移是有规律的，呈平行四变形形
 - MRO:
 ![11.78](images/mro3.png)
 - Worldview : 
