--- a/2023/11.07周报/11.7.md
+++ b/2023/11.07周报/11.7.md
@@ -9,6 +9,7 @@
 - 数据集制作： 总178张，训练集126张，测试集52张(按照观测角度顺序依次生成，分数据集时每十个为一组，前七个划分到训练集，后三个划分到测试集)
 - test_result 见下图：
 ![11.71](images/Aura.png)
+- 测试结果达到预期。
 #### worldview 世界眼卫星
 - 关键点选择 如下图标注8个关键点；
 
