--- a/2023/11.14/11.14周报.md
+++ b/2023/11.14/11.14周报.md
@@ -23,4 +23,4 @@
 ### 3，小结
 - 1.目前已完成 Rosetta;  TG-1;  Aura;  DSP；Cartography；worldview  6个目标的  完整的数据集 和 训练好的网络参数 ；
 - 2.MRO存在问题 生成数据集时 矫正对不齐；
-- 3.多个目标关键点  使用同一套网络参数   他是建议 " 进入一个分类  在进入的不同网络参数"    但又显的过于简单  之前线下组会那次 师兄提出的是优化参数 精度不可避免下降，都是完成同一个任务  用一套网络参数   与  分类＋各自网络参数 意义大吗？ 
+- 3.多个目标关键点  使用同一套网络参数   师兄是建议 " 先通过一个分类  在进入的不同网络参数"    但又显的过于简单 ， 都是完成同一个任务  用一套网络参数   与  分类＋各自网络参数 意义大吗？ 
