--- a/2023/12.20/12.20周报.md
+++ b/2023/12.20/12.20周报.md
@@ -1,8 +1,8 @@
 1.配合玮峰师兄生成Aura 、worldview 和Cartography 三个目标连续完整光学图像数据集(观测角度从361~8100，共计 7740×3 张)用于做预测实验。（今天可以生成完毕）
 
 ## 2. SuperGlue
-论文pdf:
-![520](img/SuperGlue_Learning_Feature_Matching_With_Graph_Neural_Networks.pdf)
+论文链接:
+![SuperGlue_Learning_Feature_Matching_With_Graph_Neural_Networks](img/SuperGlue_Learning_Feature_Matching_With_Graph_Neural_Networks.pdf)
 
 SuperGlue是一种通过联合寻找对应和拒绝非匹配点来匹配两组局部特征的神经网络;通过图神经网络预测的可微分的最优化分配问题来解决传输问题（如何最优地匹配一组图像中的特征点到另一组图像中的特征点）。引入了一种基于注意力的灵活的上下文聚合机制，使SuperGlue能够共同推理底层的三维场景和特征分配。与传统的、手工设计的启发式方法相比，我们的技术通过对图像对进行端到端训练，来学习三维世界的几何变换和规律。
 
@@ -75,7 +75,7 @@ A中的关键点将被分配给B中的一个关键点或垃圾箱，而每个垃
 
 ## 3.lightGlue
 论文pdf:
-  ![518](img/Lightglue.pdf)
+  ![Lightglue](img/Lightglue.pdf)
 
 LightGlue，这是基于深度学习局部特征匹配方法。论文重新审视了SuperGlue的多个设计决策，这是稀疏匹配领域的最新技术，并得出了简单但有效的改进方法。这些改进使得LightGlue在内存和计算方面更加高效，更准确，并且更容易训练。其中一个关键特性是LightGlue对问题的难度是自适应的：对于直观上易于匹配的图像对，例如具有更大的视觉重叠或有限的外观变化，推理速度更快。这为在对延迟敏感的应用中部署深度匹配器（例如3D重建）打开了令人兴奋的前景。
 
