--- a/2023/12.20/12.20周报.md
+++ b/2023/12.20/12.20周报.md
@@ -1,5 +1,5 @@
 #### 1.生成连续完整数据集
-配合玮峰师兄生成Aura 、worldview 和Cartography 三个目标连续完整光学图像数据集(观测角度从361~8100，共计 7740×3 张)用于做预测实验。（今天可以生成完毕）
+配合玮峰师兄生成Aura 、worldview 和Cartography 三个目标连续完整光学图像数据集(观测角度从361~8100，共计 7740×3 张)用于做预测实验。（今明两天可以生成完毕）
 
 ![532](img/11.png)
 
