--- a/20240327/周报.md
+++ b/20240327/周报.md
@@ -14,4 +14,5 @@
 
 ### 损失函数
 
-提出了一个混合平衡损失函数，它不仅保证了Diffusion的生成能力，而且保护了模型对长期依赖信息的把握能力，平衡损失函数如式所示。![1711544098674](../../../%E6%96%B0%E6%A1%8C%E9%9D%A2/2024/20240327/img/1711544098674.png)
+提出了一个混合平衡损失函数，它不仅保证了Diffusion的生成能力，而且保护了模型对长期依赖信息的把握能力，平衡损失函数如式所示。![1711544098674]
+![1711544098674](img/1711544098674.png)
