--- a/2024.04.03/周报.md
+++ b/2024.04.03/周报.md
@@ -2,7 +2,7 @@
 
 ### 回顾原始扩散模型：
 
-参考文献： [Ho 等 - 2020 - Denoising Diffusion Probabilistic Models.pdf](img\Ho 等 - 2020 - Denoising Diffusion Probabilistic Models.pdf) 
+参考文献： [Ho 等 - 2020 - Denoising Diffusion Probabilistic Models](img/Ho 等 - 2020 - Denoising Diffusion Probabilistic Models.pdf) 
 
 ![1712157834462](img/1712157834462.png)
 
