--- a/2024.04.03/周报.md
+++ b/2024.04.03/周报.md
@@ -2,7 +2,7 @@
 
 ### 回顾原始扩散模型：
 
-参考文献： [Ho 等 - 2020 - Denoising Diffusion Probabilistic Models](img/Ho 等 - 2020 - Denoising Diffusion Probabilistic Models.pdf) 
+参考文献： [Ho 等 - 2020 - Denoising Diffusion Probabilistic Models](img/1.pdf) 
 
 ![1712157834462](img/1712157834462.png)
 
@@ -10,11 +10,11 @@
 
 参考文献：
 
- [Rasul 等 - Autoregressive Denoising Diffusion Models for Mult.pdf](img\Rasul 等 - Autoregressive Denoising Diffusion Models for Mult.pdf) 
+ [Rasul 等 - Autoregressive Denoising Diffusion Models for Mult.pdf](img/2.pdf) 
 
- [Shen 和 Kwok - Non-autoregressive Conditional Diffusion Models fo.pdf](img\Shen 和 Kwok - Non-autoregressive Conditional Diffusion Models fo.pdf) 
+ [Shen 和 Kwok - Non-autoregressive Conditional Diffusion Models fo.pdf](img/2.pdf) 
 
- [Shen 等 - 2024 - MULTI-RESOLUTION DIFFUSION MODELS FOR TIME SERIES .pdf](img\Shen 等 - 2024 - MULTI-RESOLUTION DIFFUSION MODELS FOR TIME SERIES .pdf) 
+ [Shen 等 - 2024 - MULTI-RESOLUTION DIFFUSION MODELS FOR TIME SERIES .pdf](img/3.pdf) 
 
 ![1712157887297](img/1712157887297.png) 
 
