--- a/20240507/周报.md
+++ b/20240507/周报.md
@@ -9,8 +9,8 @@
 ![1715062677042](img/1715062677042.png)
 
 ###  3.数据集
-
-正常逻辑：
+正常aura ;TG1; cart;  worldview; dsp; 
+步骤：
 
 ![1715063636281](img/1715063636281.png)
 
