--- a/20240507/周报.md
+++ b/20240507/周报.md
@@ -14,7 +14,7 @@
 
 ![1715063636281](img/1715063636281.png)
 
-![1715063653340](img/1715063653340.png)
+![r1c9rnpn](img/r1c9rnpn.png)
 
 问题: rosetta 和MRO
 
