--- a/202410.9/周报.md
+++ b/202410.9/周报.md
@@ -12,12 +12,10 @@
 ### 2.下周安排
 
 - 10.10 摘要提交
-
-- 10.12-10.14 先翻译+排版，
-- 10.14-10.15 看是否增加 变分辨率 估计实验
-
-- 10.16-10.17 细节调整
-
+- 10.12-10.13 完整中文稿
+- 10.14 先翻译+排版，
+- 10.15-10.16 看是否增加 变分辨率 估计实验
+- 10.17 细节调整
 - 10.18号终稿
 
   
